--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db=h2
 jdbc.driver=org.h2.Driver
-jdbc.url=jdbc:h2:file:D:/Lams;AUTO_SERVER=TRUE
+jdbc.url=jdbc:h2:mem:activiti;DB_CLOSE_DELAY=1000
 jdbc.username=sa
 jdbc.password=
