升级到5.15.1 ，整合explorer 和 rest

--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,15 @@
             <version>3.2.2</version>
         </dependency>
 
+
+        <!-- test -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.1</version>
+            <scope>test</scope>
+        </dependency>
+
 	</dependencies>
 
     <repositories>
